--- a/ui/image_window.ui
+++ b/ui/image_window.ui
@@ -276,7 +276,7 @@
              </widget>
             </item>
             <item>
-             <widget class="QPushButton" name="save_btn">
+             <widget class="QPushButton" name="next_btn">
               <property name="maximumSize">
                <size>
                 <width>16777215</width>
