--- a/ui/saving_window.ui
+++ b/ui/saving_window.ui
@@ -40,21 +40,24 @@
    <property name="frameShadow">
     <enum>QFrame::Raised</enum>
    </property>
-   <widget class="QLineEdit" name="header_text">
+   <widget class="QLineEdit" name="title">
     <property name="geometry">
      <rect>
-      <x>160</x>
-      <y>100</y>
+      <x>180</x>
+      <y>110</y>
       <width>221</width>
       <height>31</height>
      </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">background:none</string>
     </property>
    </widget>
    <widget class="QWidget" name="widget" native="true">
     <property name="geometry">
      <rect>
       <x>60</x>
-      <y>190</y>
+      <y>200</y>
       <width>501</width>
       <height>41</height>
      </rect>
@@ -99,14 +102,17 @@
      </property>
     </widget>
    </widget>
-   <widget class="QLineEdit" name="title">
+   <widget class="QLineEdit" name="header_text">
     <property name="geometry">
      <rect>
-      <x>160</x>
-      <y>60</y>
+      <x>180</x>
+      <y>150</y>
       <width>221</width>
       <height>31</height>
      </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">background:none</string>
     </property>
    </widget>
   </widget>
